* Added "quick quote" feature.
* Added lock and pin options to posting menu.
* Links to jump to "oldest unread post".
* Error messages will generate a backtrace.
* Move rsscache to the stats directory.
* Hovering over a topic title shows date it was posted.
* Optional email notification of private messages.
* Less intrusive validator images.
* Limit the maximum size of fonts in posts.

  Bugs addressed:

* Users with over 1000 posts don't format the numbers in search results.
* SQL backup now calls on mysqldump to address serious issues with the old backup code.
* BBCode access key support was not working.
* Updated DOM tree based bbcode parser. Fixes several issues with the old one.
* End tags on input missing in CF_PREFS template.
* Font sizes restricted to reasonable levels.
* AdminCP member editor synced with the UserCP profile editor.
* User post counts get fouled up when deleting topics.
* User post count resets to 0 when deleting a single post.
* "Fix member stats" link in AdminCP will correct user post counts as well.
* Unread markers need to be deleted when topics or users are deleted.
* Pass by reference error in avatar controls.
* A fatal installer error was corrected.
* RSS feed does not filter out unpublished topics.
* RSS feed email addresses were not RFC 2822 compliant.

Changes for 1.3.1:

* Updated German translation - Jens
* Updated Norwegian translation - Ingvild
* Updated Swedish tranlsation - ladyanna
* Added a warning on install if folders are not writable
* Quick reply bbcode and smileys load on focus
* New backup tool uses XML

  Bugs addressed:

* Renamed zip class to avoid conflict (#952)
* Jump to newest post on recent posts was using old urls
* Made sure textarea boxes are readable on usual windows themes - Matt
* User posts can go negative (#957)
* Censor words was not processing properly - harakiro
* Converted most languages to utf-8 for JSON compatibility
* Fixing icons in recent posts page (#888)