@@ -14,6 +14,7 @@ Changes for 1.3.2:
 * Optional email notification of private messages.
 * Less intrusive validator images.
 * Limit the maximum size of fonts in posts.
+* Changed template color change can be difficult or impossible to see on LCD monitors.
 
   Bugs addressed:
 
